; ModuleID = '/home/carl/AnghaBench/libgit2/tests/refs/extr_create.c_test_refs_create__propagate_eexists.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/refs/extr_create.c_test_refs_create__propagate_eexists.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@current_master_tip = common dso_local global i32 0, align 4
@g_repo = common dso_local global i32 0, align 4
@current_head_target = common dso_local global i32 0, align 4
@GIT_EEXISTS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [5 x i8] c"HEAD\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_refs_create__propagate_eexists() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = load i32, i32* @current_master_tip, align 4
  %5 = call i32 @git_oid_fromstr(i32* %2, i32 %4)
  %6 = load i32, i32* @g_repo, align 4
  %7 = load i32, i32* @current_head_target, align 4
  %8 = call i32 @git_reference_create(i32** %3, i32 %6, i32 %7, i32* %2, i32 0, i32* null)
  store i32 %8, i32* %1, align 4
  %9 = load i32, i32* %1, align 4
  %10 = load i32, i32* @GIT_EEXISTS, align 4
  %11 = icmp eq i32 %9, %10
  %12 = zext i1 %11 to i32
  %13 = call i32 @cl_assert(i32 %12)
  %14 = load i32, i32* @g_repo, align 4
  %15 = load i32, i32* @current_head_target, align 4
  %16 = call i32 @git_reference_symbolic_create(i32** %3, i32 %14, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 %15, i32 0, i32* null)
  store i32 %16, i32* %1, align 4
  %17 = load i32, i32* %1, align 4
  %18 = load i32, i32* @GIT_EEXISTS, align 4
  %19 = icmp eq i32 %17, %18
  %20 = zext i1 %19 to i32
  %21 = call i32 @cl_assert(i32 %20)
  ret void
}

declare dso_local i32 @git_oid_fromstr(i32*, i32) #1

declare dso_local i32 @git_reference_create(i32**, i32, i32, i32*, i32, i32*) #1

declare dso_local i32 @cl_assert(i32) #1

declare dso_local i32 @git_reference_symbolic_create(i32**, i32, i8*, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
